# skyn3t-orchestrator

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  PLAN.md  PORTABILITY.md  README.md  STATUS.md  brainstorm.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_DRAFT.md
docs/: CONTINUE.md  DISCORD_SETUP.md  FIXES_quick_reference.txt  FIXES_reliability_iteration2.md  FIX_kimi_cli_health_2026-05-15.md  HANDOFF.md  ISSUE_codegen_reliability.md  MISSION.md  PLAN_self_improving_loop.md  README_reliability_fixes.md  REBUILD_PLAN.md  RESUME_HERE.md  SINGLE_LEADER_AND_WATCHDOG.md  SKYN3T_SCORECARD.md  SWARM_AUDIT_2026-05-14.md  SWARM_DEBUG_AUDIT_2026-05-14.md  SWARM_DEEP_DIVE_GAPS_2026-06-12.md  SWARM_FABLE_MERGED_GAP_REPORT_2026-06-12.md  TELEGRAM_SETUP.md  WISHLIST.md  debug_report_2026-05-14.md  debug_report_2026-05-20.md  how-to-raise-studio-score.md  skyn3t-summary.md  studio-score-49-report-2026-05-19.md  technical_flow_diagram.md
examples/: agent_overrides.recommended.json  basic_pipeline.py  github_explorer_example.py  multi_agent_chat.py
scripts/: backfill_build_patterns.py  check_openrouter_changes.py  cleanup_disk.sh  cursor_improve.sh  dedup_dashboard_css.py  domain_benchmark_weekly.sh  healthcheck.sh  healthcheck_fleet.sh  never_stop.sh  restart-backend.sh  restore-snapshot.sh  run.sh  setup-new-machine.sh  setup.sh  snapshot.sh  studio_smoke.sh  worktree.sh
skyn3t/: __init__.py  __main__.py  prompt_compression.py  worktree.py
skyn3t/cli/: cleanup.py  (+5 more)
tests/: __init__.py  conftest.py  test_acp_server.py  test_agent_catalog.py  test_agent_fleet.py  test_agent_helpers.py  test_agents.py  test_anti_patterns_and_cache.py  test_anti_slop.py  test_approval_gate.py  test_architect_decisions_contract.py  test_architect_local_first.py  test_architect_sanitizer.py  test_audit_autonomy_sched.py  test_audit_code_agent.py  test_audit_code_improver.py  test_audit_consistency.py  test_audit_contract.py  test_audit_doc_processor.py  test_audit_llm_client.py  test_audit_never_stop.py  test_audit_repl.py  test_audit_runner.py  test_audit_sandbox.py  test_audit_self_improving_loop.py  test_audit_web_app.py  test_auto_cleanup.py  test_autonomous_loop.py  test_autonomous_queue_bound.py  test_autonomy_wiring.py  test_backfill_unresolved_imports.py  test_benchmark_cohort.py  test_boot_verifier_execute.py  test_brief_requirements.py  test_build_fix_loop_fires.py  test_build_pattern_bias_apply.py  test_build_patterns.py  test_build_verifier.py  test_cheap_smart.py  test_clarification.py  (+159 more)
(+291 files in other folders)
