[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skyn3t-orchestrator"
version = "0.1.0"
description = "SkyN3t — A multi-agent orchestrator with self-healing, RAG, and autonomous task execution"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "SkyN3t Team"},
]
keywords = ["ai", "agents", "orchestrator", "rag", "multi-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.25",
    "aiosqlite>=0.19.0",
    "chromadb>=0.4.22",
    "sentence-transformers>=2.2.2",
    "openai>=1.10.0",
    "anthropic>=0.18.0",
    "httpx>=0.26.0",
    "aiohttp>=3.9.0",
    "redis>=5.0.0",
    "prometheus-client>=0.19.0",
    "structlog>=24.1.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "jinja2>=3.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "PyGithub>=2.1.0",
    "gitpython>=3.1.40",
    "aiofiles>=23.2.0",
    "watchdog>=3.0.0",
    "psutil>=5.9.0",
    "tenacity>=8.2.0",
    "orjson>=3.9.0",
    "slack-bolt>=1.18.0",
    "slack-sdk>=3.26.0",
    "discord.py>=2.3.0",
    "aioimaplib>=1.0.0",
    "aiosmtplib>=3.0.0",
    "cryptography>=42.0.0",
    "beautifulsoup4>=4.12.0",
    "prompt_toolkit>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "respx>=0.20.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "httpx>=0.26.0",
]

[project.scripts]
skyn3t = "skyn3t.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["skyn3t*"]
exclude = ["tests*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
